--- a/ClearVision_v6.theme.css
+++ b/ClearVision_v6.theme.css
@@ -42,7 +42,7 @@
   --background-blur: 0px; /* app background blur [default: 0px] */
 
   /* HOME BUTTON ICON */
-  --home-icon: url(https://img1.pnghut.com/10/21/20/pHVem871T6/emoticon-logo-purple-smile-area.jpg); /* home button icon (link must be HTTPS) [default: url(https://clearvision.github.io/icons/discord.svg)]*/
+  --home-icon: url(https://raw.githubusercontent.com/wegang-zh5/discord-css/main/icons8-discord-50.png); /* home button icon (link must be HTTPS) [default: url(https://clearvision.github.io/icons/discord.svg)]*/
   --home-position: center; /* home button icon position [default: center] */
   --home-size: 40px; /* home button icon size [default: 40px] */
 
