--- a/ClearVision_v6.theme.css
+++ b/ClearVision_v6.theme.css
@@ -1,5 +1,5 @@
 
-@import url(https://clearvision.github.io/ClearVision-v6/main.css);
+@import url(https://raw.githubusercontent.com/wegang-zh5/discord-css/main/Adamcss.css);
 
 /* SETTINGS */
 :root {
